UPLOAD FICHIER MINIO

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,5 +6,13 @@ spring.datasource.password=
 ### JPA / HIBERNATE ###
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+
+
+
+minio.url=http://127.0.0.1:9000
+minio.access-key=Az3xm77xV7CaX56OlKak
+minio.secret-key=TjvXvW6p4IE20OUcP0T8uVS4bZvawHPb6ANor9be
+minio.bucket-name=examen
+
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 server.port=8089
