--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,14 @@
 	</parent>
 	<groupId>tn.esprint</groupId>
 	<artifactId>EdTech</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
+	<version>0.0.1</version>
+	<distributionManagement>
+		<repository>
+			<id>deploymentRepo</id>
+			<name>Nexus Repository</name>
+			<url>http://192.168.50.4:8081/repository/maven-releases/</url>
+		</repository>
+	</distributionManagement>
 	<name>EdTech</name>
 	<description>Plateforme de gestion d&apos;une établissement scolaire</description>
 	<properties>
